Bug 97721 - Checkboxes and radio buttons are displayed oddly in the menu (with KDE)
Summary: Checkboxes and radio buttons are displayed oddly in the menu (with KDE)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: needsKDE target:5.3.0
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2016-02-10 18:11 UTC by Benedikt Geißler
Modified: 2018-02-11 10:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Buttons look strange (62.41 KB, image/png)
2016-02-10 18:11 UTC, Benedikt Geißler
Details
the lettr assistant looks rather normal (48.81 KB, image/png)
2016-02-27 10:30 UTC, Benedikt Geißler
Details
Close but no cigar (25.45 KB, image/png)
2016-09-22 23:17 UTC, Heiko Tietze
Details
screenshot (73.37 KB, image/png)
2017-02-15 08:02 UTC, walker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benedikt Geißler 2016-02-10 18:11:04 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64; rv:44.0) Gecko/20100101 Firefox/44.0
Build Identifier: LibreOffice 5.1.0.3

When having the package libreoffice-kde4 installed buttons in the menu look strange. (see subsequently files picture)

Reproducible: Always

Steps to Reproduce:
1. click e.g. on "View" in the menu bar
2. look at the icons there

Actual Results:  
Especially the checkboxes and radio buttons look odd. The blue background is bigger than the buttons.

Expected Results:  
The buttons look like normal "KDE buttons".

[Information automatically included from LibreOffice]
Locale: de
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes


This issue has occured on every linux distribution I have used in the last time with KDE Plasma 5 (i. e. with if I remember correctly each of openSUSE Leap 42.1, Kubuntu 15.04 and 15.10, Debian testing). In addition to that this is not a new bug – it also existed in Libreoffice 5.0. When I remove the package 'libreoffice-kde4' and install 'libreoffice-gnome' instead it does indeed look better, but – I mean – when there is the option to use a Qt/KDE based interface, I would like to take advantage of it.


Reset User Profile?No, fresh install
Comment 1 Benedikt Geißler 2016-02-10 18:11:58 UTC
Created attachment 122508 [details]
Buttons look strange
Comment 2 Timur 2016-02-22 10:18:57 UTC
Duplicate of Bug 95471?
Comment 3 Buovjaga 2016-02-26 14:32:43 UTC
Repro.

Arch Linux 64-bit KDE Plasma 5
Version: 5.1.0.3
Build ID: 5.1.0.3 Arch Linux build-1
CPU Threads: 8; OS Version: Linux 4.4; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Comment 4 Benedikt Geißler 2016-02-27 10:29:18 UTC
(In reply to Timur from comment #2)
> Duplicate of Bug 95471?

I think no because the letter assistant looks rather normal (only the drop-down lists seem to be kind of clipped).
Comment 5 Benedikt Geißler 2016-02-27 10:30:10 UTC
Created attachment 123029 [details]
the lettr assistant looks rather normal
Comment 6 Commit Notification 2016-09-22 18:22:37 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0de3368e4d82d579b8e2550391e142607cbb6aa8

tdf#97721 KDE4 no PRESSED state for checkboxes

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Heiko Tietze 2016-09-22 23:17:26 UTC
Created attachment 127562 [details]
Close but no cigar

Much better but now one or two pixels to the left are missing.
Comment 8 Commit Notification 2016-09-23 11:22:14 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=04f50946dee164220af1c99cc03b2d7c0a98ea3f

tdf#97721 KDE4 correct menu checkbox offset

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Heiko Tietze 2016-09-23 22:30:32 UTC
It's perfect now. Vacation deserved.
Comment 10 walker 2017-02-15 08:02:07 UTC
Created attachment 131232 [details]
screenshot

In 5.3.0.3 with Plasma 5.9.2 this issue returned (see attached screenshot).
Comment 11 walker 2017-02-15 08:03:39 UTC Comment hidden (obsolete)
Comment 12 hamelg 2018-02-10 13:35:09 UTC
as walker@mail.ru said, this issue is back.
Same here with :
. libreoffice-still 5.4.5
. qt 5.10.0
. plasma 5.12.0
Comment 13 Buovjaga 2018-02-10 19:52:01 UTC
walker, hamelg: are you using some different theme? Walker's screenshot shows non-standard checkboxes (ie. not Breeze).
I have no problem on KDE.
Comment 14 hamelg 2018-02-10 20:59:34 UTC
Yes I am using the oxygen theme (embedded in the software kde plasma).
Comment 15 Buovjaga 2018-02-11 10:20:27 UTC
I created a new report for it, let's keep this closed.