tdf#97721 KDE4 no PRESSED state for checkboxes

Selecting radio and check boxes is handled via
QStyleOptionMenuItem::checked. Actually forwarding the
QStyle::State_Sunken creates strange artifacts in all
menus.

Change-Id: Ia0b0864b9bec5961023b4f25315a8acf1fae4683